# BSK_collition_check

./: Cargo.toml  flake.nix  fum.txt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: b007mn45r7nn7ghbxpr320l917bzg2rp-source  km82zphch5mxfrygaa9frzxyn8c4zdk5-source
src/: analyzer.rs  main.rs  parser.rs  types.rs
tests/: core_tests.rs
