[package]
name = "containtment_check"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
winnow = "0.7.13"
scraper = "0.24"
anyhow = "1.0"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking"] }
strsim = "0.11.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
colored = "3.0.0"
